--- a/source/vendor.scss
+++ b/source/vendor.scss
@@ -86,6 +86,8 @@ textarea {
   padding: 0;
   border: 0;
   outline: 0;
+  border-radius: 0;
   background-color: transparent;
   line-height: inherit;
+  -webkit-appearance: none;
 }
